name:                parser241
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/ProductRule#readme
license:             BSD3
license-file:        LICENSE
author:              Yu Li
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser.ProductRule
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
  default-language:    Haskell2010

test-suite ProductRule-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  build-depends:       base
                     , parser241
                     , containers
                     , mtl
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ProductRule
