name:                parser241
version:             1.0.0.0
synopsis:            An interface to create production rules using augmented grammars
description:         This package allows you to define production rules using clean augmented grammars.
homepage:            https://github.com/YLiLarry/parser241-product-rule
license:             BSD3
license-file:        LICENSE
author:              Yu Li
maintainer:          ylilarry@gmail.com
copyright:           2015 Yu Li
category:            Parser
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       Parser241
                     , Parser241.Parser
                     , Parser241.Parser.LL
                     , Parser241.Parser.LL.Internal
                     , Parser241.Parser.ProductionRule
                     , Parser241.Parser.ProductionRule.Internal
                     , Parser241.Parser.ProductionRule.Internal.Maker
                     , Parser241.Parser.ProductionRule.Internal.Manager
                     , Parser241.Parser.PredictorTable
                     , Parser241.Parser.PredictorTable.Internal
                     , Parser241.Lexer
                     , Parser241.Lexer.Internal

  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , hspec
                     , regex-compat-tdfa
                     , ListWriter
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  other-modules:
                       Parser241.Lexer.Internal
                     , Parser241.Parser.PredictorTable
                     , Parser241.Parser.PredictorTable.Internal
                     , Parser241.Parser.ProductionRule
                     , Parser241.Parser.ProductionRule.Internal
                     , Parser241.Parser.ProductionRule.Internal.Maker
                     , Parser241.Parser.ProductionRule.Internal.Manager
                     , Test.Lexer
                     , Test.PredictorTable
                     , Test.ProductionRule
  build-depends:       base
                     , parser241
                     , containers
                     , mtl
                     , hspec
                     , regex-compat-tdfa
                     , ListWriter
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/YLiLarry/parser241-product-rule
