name:                parser241
version:             1.0.0.0
synopsis:            An interface to create production rules using augmented grammars
description:         This package allows you to define production rules using clean augmented grammars.
homepage:            https://github.com/YLiLarry/parser241-production-rule
license:             BSD3
license-file:        LICENSE
author:              Yu Li
maintainer:          ylilarry@gmail.com
copyright:           2015 Yu Li
category:            Parser
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       Parser241
                     , Parser241.Parser
                     , Parser241.Parser.LL
                     , Parser241.Parser.LL.Internal
                     , Parser241.Parser.PredictorTable
                     , Parser241.Parser.PredictorTable.Internal
                     , Parser241.Debug
                     , Parser241.Debug.Internal

  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , hspec
                     , parser241-lexer
                     , parser241-production-rule
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  other-modules:
                       Parser241.Parser.PredictorTable
                     , Parser241.Parser.PredictorTable.Internal
                     , Parser241.Debug
                     , Parser241.Debug.Internal
                     , Parser241.Parser
                     , Parser241.Parser.LL
                     , Parser241.Parser.LL.Internal
                     , Test.Parser
                     , Test.PredictorTable
  build-depends:       base
                     , parser241
                     , containers
                     , mtl
                     , hspec
                     , parser241-lexer
                     , parser241-production-rule
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/YLiLarry/parser241
